syntax = "proto3";
package opennms.sink.traps;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.grpc.traps.contract";

import "opennms/traps/traps.proto";
import "opennms_minion_ipc.proto";

message TenantLocationSpecificTrapLogDTO {
  string tenantId = 100;
  string location = 101;

  minion.Identity identity = 1;
  string trapAddress = 2;
  repeated TrapDTO trapDTO = 3;
}
